fix: session results flag/dispute buttons and user edit error
SessionResultsPage.jsx:
- isFlagged now derived from response.isFlagged boolean instead of
  responseStatus === "FLAGGED" — FLAGGED was removed from ResponseStatus
  in the is_flagged migration so buttons were permanently hidden
- canDispute now uses user.canRaiseDispute role flag instead of the
  hardcoded hierarchy level check (level <= 6)
- Flag button guards against already-flagged responses with !isFlagged
  check — previously the button could render on an already-flagged response
- FLAGGED removed from ResponseStatusBadge map — dead code since FLAGGED
  is no longer a valid ResponseStatus value

UserService.java:
- resolveClients returns new ArrayList<>() and Collectors.toList() instead
  of List.of() and .toList() — Hibernate requires a mutable collection to
  manage the ManyToMany user_clients join table; immutable lists caused an
  UnsupportedOperationException surfacing as a generic 500 error
- updateUser, deactivateUser, reactivateUser now call userMapper.toDTO()
  instead of the stale private toDTO() method left over from before the
  mapper was introduced
- Private toDTO() method removed — duplicated the mapper and was the source
  of the inconsistency